parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    FALSE
    TRUE
    TRUTH_VALUES

Grammar

Rule 0     S' -> start
Rule 1     start -> assignment
Rule 2     start -> expression
Rule 3     start -> annotation
Rule 4     start -> assumption
Rule 5     start -> declaration
Rule 6     declaration -> BOOL_TYPE VARIABLE
Rule 7     declaration -> INT_TYPE VARIABLE
Rule 8     annotation -> ANNOTATION expression
Rule 9     assumption -> ASSUME expression
Rule 10    assignment -> VARIABLE ASSIGNMENT expression
Rule 11    expression -> expression PLUS expression
Rule 12    expression -> expression MINUS expression
Rule 13    expression -> expression TIMES expression
Rule 14    expression -> LPAREN expression RPAREN
Rule 15    expression -> NUMBER
Rule 16    expression -> VARIABLE
Rule 17    expression -> MINUS expression
Rule 18    expression -> expression COMPARATOR expression
Rule 19    expression -> expression BOOLEAN_OPERATOR expression
Rule 20    expression -> expression IMPLIES expression
Rule 21    expression -> IF expression THEN assignment ELSE assignment

Terminals, with rules where they appear

ANNOTATION           : 8
ASSIGNMENT           : 10
ASSUME               : 9
BOOLEAN_OPERATOR     : 19
BOOL_TYPE            : 6
COMPARATOR           : 18
ELSE                 : 21
FALSE                : 
IF                   : 21
IMPLIES              : 20
INT_TYPE             : 7
LPAREN               : 14
MINUS                : 12 17
NUMBER               : 15
PLUS                 : 11
RPAREN               : 14
THEN                 : 21
TIMES                : 13
TRUE                 : 
TRUTH_VALUES         : 
VARIABLE             : 6 7 10 16
error                : 

Nonterminals, with rules where they appear

annotation           : 3
assignment           : 1 21 21
assumption           : 4
declaration          : 5
expression           : 2 8 9 10 11 11 12 12 13 13 14 17 18 18 19 19 20 20 21
start                : 0

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . assignment
    (2) start -> . expression
    (3) start -> . annotation
    (4) start -> . assumption
    (5) start -> . declaration
    (10) assignment -> . VARIABLE ASSIGNMENT expression
    (11) expression -> . expression PLUS expression
    (12) expression -> . expression MINUS expression
    (13) expression -> . expression TIMES expression
    (14) expression -> . LPAREN expression RPAREN
    (15) expression -> . NUMBER
    (16) expression -> . VARIABLE
    (17) expression -> . MINUS expression
    (18) expression -> . expression COMPARATOR expression
    (19) expression -> . expression BOOLEAN_OPERATOR expression
    (20) expression -> . expression IMPLIES expression
    (21) expression -> . IF expression THEN assignment ELSE assignment
    (8) annotation -> . ANNOTATION expression
    (9) assumption -> . ASSUME expression
    (6) declaration -> . BOOL_TYPE VARIABLE
    (7) declaration -> . INT_TYPE VARIABLE

    VARIABLE        shift and go to state 7
    LPAREN          shift and go to state 9
    NUMBER          shift and go to state 10
    MINUS           shift and go to state 8
    IF              shift and go to state 11
    ANNOTATION      shift and go to state 12
    ASSUME          shift and go to state 13
    BOOL_TYPE       shift and go to state 14
    INT_TYPE        shift and go to state 15

    start                          shift and go to state 1
    assignment                     shift and go to state 2
    expression                     shift and go to state 3
    annotation                     shift and go to state 4
    assumption                     shift and go to state 5
    declaration                    shift and go to state 6

state 1

    (0) S' -> start .



state 2

    (1) start -> assignment .

    $end            reduce using rule 1 (start -> assignment .)


state 3

    (2) start -> expression .
    (11) expression -> expression . PLUS expression
    (12) expression -> expression . MINUS expression
    (13) expression -> expression . TIMES expression
    (18) expression -> expression . COMPARATOR expression
    (19) expression -> expression . BOOLEAN_OPERATOR expression
    (20) expression -> expression . IMPLIES expression

    $end            reduce using rule 2 (start -> expression .)
    PLUS            shift and go to state 16
    MINUS           shift and go to state 17
    TIMES           shift and go to state 18
    COMPARATOR      shift and go to state 19
    BOOLEAN_OPERATOR shift and go to state 20
    IMPLIES         shift and go to state 21


state 4

    (3) start -> annotation .

    $end            reduce using rule 3 (start -> annotation .)


state 5

    (4) start -> assumption .

    $end            reduce using rule 4 (start -> assumption .)


state 6

    (5) start -> declaration .

    $end            reduce using rule 5 (start -> declaration .)


state 7

    (10) assignment -> VARIABLE . ASSIGNMENT expression
    (16) expression -> VARIABLE .

    ASSIGNMENT      shift and go to state 22
    PLUS            reduce using rule 16 (expression -> VARIABLE .)
    MINUS           reduce using rule 16 (expression -> VARIABLE .)
    TIMES           reduce using rule 16 (expression -> VARIABLE .)
    COMPARATOR      reduce using rule 16 (expression -> VARIABLE .)
    BOOLEAN_OPERATOR reduce using rule 16 (expression -> VARIABLE .)
    IMPLIES         reduce using rule 16 (expression -> VARIABLE .)
    $end            reduce using rule 16 (expression -> VARIABLE .)


state 8

    (17) expression -> MINUS . expression
    (11) expression -> . expression PLUS expression
    (12) expression -> . expression MINUS expression
    (13) expression -> . expression TIMES expression
    (14) expression -> . LPAREN expression RPAREN
    (15) expression -> . NUMBER
    (16) expression -> . VARIABLE
    (17) expression -> . MINUS expression
    (18) expression -> . expression COMPARATOR expression
    (19) expression -> . expression BOOLEAN_OPERATOR expression
    (20) expression -> . expression IMPLIES expression
    (21) expression -> . IF expression THEN assignment ELSE assignment

    LPAREN          shift and go to state 9
    NUMBER          shift and go to state 10
    VARIABLE        shift and go to state 24
    MINUS           shift and go to state 8
    IF              shift and go to state 11

    expression                     shift and go to state 23

state 9

    (14) expression -> LPAREN . expression RPAREN
    (11) expression -> . expression PLUS expression
    (12) expression -> . expression MINUS expression
    (13) expression -> . expression TIMES expression
    (14) expression -> . LPAREN expression RPAREN
    (15) expression -> . NUMBER
    (16) expression -> . VARIABLE
    (17) expression -> . MINUS expression
    (18) expression -> . expression COMPARATOR expression
    (19) expression -> . expression BOOLEAN_OPERATOR expression
    (20) expression -> . expression IMPLIES expression
    (21) expression -> . IF expression THEN assignment ELSE assignment

    LPAREN          shift and go to state 9
    NUMBER          shift and go to state 10
    VARIABLE        shift and go to state 24
    MINUS           shift and go to state 8
    IF              shift and go to state 11

    expression                     shift and go to state 25

state 10

    (15) expression -> NUMBER .

    PLUS            reduce using rule 15 (expression -> NUMBER .)
    MINUS           reduce using rule 15 (expression -> NUMBER .)
    TIMES           reduce using rule 15 (expression -> NUMBER .)
    COMPARATOR      reduce using rule 15 (expression -> NUMBER .)
    BOOLEAN_OPERATOR reduce using rule 15 (expression -> NUMBER .)
    IMPLIES         reduce using rule 15 (expression -> NUMBER .)
    $end            reduce using rule 15 (expression -> NUMBER .)
    RPAREN          reduce using rule 15 (expression -> NUMBER .)
    THEN            reduce using rule 15 (expression -> NUMBER .)
    ELSE            reduce using rule 15 (expression -> NUMBER .)


state 11

    (21) expression -> IF . expression THEN assignment ELSE assignment
    (11) expression -> . expression PLUS expression
    (12) expression -> . expression MINUS expression
    (13) expression -> . expression TIMES expression
    (14) expression -> . LPAREN expression RPAREN
    (15) expression -> . NUMBER
    (16) expression -> . VARIABLE
    (17) expression -> . MINUS expression
    (18) expression -> . expression COMPARATOR expression
    (19) expression -> . expression BOOLEAN_OPERATOR expression
    (20) expression -> . expression IMPLIES expression
    (21) expression -> . IF expression THEN assignment ELSE assignment

    LPAREN          shift and go to state 9
    NUMBER          shift and go to state 10
    VARIABLE        shift and go to state 24
    MINUS           shift and go to state 8
    IF              shift and go to state 11

    expression                     shift and go to state 26

state 12

    (8) annotation -> ANNOTATION . expression
    (11) expression -> . expression PLUS expression
    (12) expression -> . expression MINUS expression
    (13) expression -> . expression TIMES expression
    (14) expression -> . LPAREN expression RPAREN
    (15) expression -> . NUMBER
    (16) expression -> . VARIABLE
    (17) expression -> . MINUS expression
    (18) expression -> . expression COMPARATOR expression
    (19) expression -> . expression BOOLEAN_OPERATOR expression
    (20) expression -> . expression IMPLIES expression
    (21) expression -> . IF expression THEN assignment ELSE assignment

    LPAREN          shift and go to state 9
    NUMBER          shift and go to state 10
    VARIABLE        shift and go to state 24
    MINUS           shift and go to state 8
    IF              shift and go to state 11

    expression                     shift and go to state 27

state 13

    (9) assumption -> ASSUME . expression
    (11) expression -> . expression PLUS expression
    (12) expression -> . expression MINUS expression
    (13) expression -> . expression TIMES expression
    (14) expression -> . LPAREN expression RPAREN
    (15) expression -> . NUMBER
    (16) expression -> . VARIABLE
    (17) expression -> . MINUS expression
    (18) expression -> . expression COMPARATOR expression
    (19) expression -> . expression BOOLEAN_OPERATOR expression
    (20) expression -> . expression IMPLIES expression
    (21) expression -> . IF expression THEN assignment ELSE assignment

    LPAREN          shift and go to state 9
    NUMBER          shift and go to state 10
    VARIABLE        shift and go to state 24
    MINUS           shift and go to state 8
    IF              shift and go to state 11

    expression                     shift and go to state 28

state 14

    (6) declaration -> BOOL_TYPE . VARIABLE

    VARIABLE        shift and go to state 29


state 15

    (7) declaration -> INT_TYPE . VARIABLE

    VARIABLE        shift and go to state 30


state 16

    (11) expression -> expression PLUS . expression
    (11) expression -> . expression PLUS expression
    (12) expression -> . expression MINUS expression
    (13) expression -> . expression TIMES expression
    (14) expression -> . LPAREN expression RPAREN
    (15) expression -> . NUMBER
    (16) expression -> . VARIABLE
    (17) expression -> . MINUS expression
    (18) expression -> . expression COMPARATOR expression
    (19) expression -> . expression BOOLEAN_OPERATOR expression
    (20) expression -> . expression IMPLIES expression
    (21) expression -> . IF expression THEN assignment ELSE assignment

    LPAREN          shift and go to state 9
    NUMBER          shift and go to state 10
    VARIABLE        shift and go to state 24
    MINUS           shift and go to state 8
    IF              shift and go to state 11

    expression                     shift and go to state 31

state 17

    (12) expression -> expression MINUS . expression
    (11) expression -> . expression PLUS expression
    (12) expression -> . expression MINUS expression
    (13) expression -> . expression TIMES expression
    (14) expression -> . LPAREN expression RPAREN
    (15) expression -> . NUMBER
    (16) expression -> . VARIABLE
    (17) expression -> . MINUS expression
    (18) expression -> . expression COMPARATOR expression
    (19) expression -> . expression BOOLEAN_OPERATOR expression
    (20) expression -> . expression IMPLIES expression
    (21) expression -> . IF expression THEN assignment ELSE assignment

    LPAREN          shift and go to state 9
    NUMBER          shift and go to state 10
    VARIABLE        shift and go to state 24
    MINUS           shift and go to state 8
    IF              shift and go to state 11

    expression                     shift and go to state 32

state 18

    (13) expression -> expression TIMES . expression
    (11) expression -> . expression PLUS expression
    (12) expression -> . expression MINUS expression
    (13) expression -> . expression TIMES expression
    (14) expression -> . LPAREN expression RPAREN
    (15) expression -> . NUMBER
    (16) expression -> . VARIABLE
    (17) expression -> . MINUS expression
    (18) expression -> . expression COMPARATOR expression
    (19) expression -> . expression BOOLEAN_OPERATOR expression
    (20) expression -> . expression IMPLIES expression
    (21) expression -> . IF expression THEN assignment ELSE assignment

    LPAREN          shift and go to state 9
    NUMBER          shift and go to state 10
    VARIABLE        shift and go to state 24
    MINUS           shift and go to state 8
    IF              shift and go to state 11

    expression                     shift and go to state 33

state 19

    (18) expression -> expression COMPARATOR . expression
    (11) expression -> . expression PLUS expression
    (12) expression -> . expression MINUS expression
    (13) expression -> . expression TIMES expression
    (14) expression -> . LPAREN expression RPAREN
    (15) expression -> . NUMBER
    (16) expression -> . VARIABLE
    (17) expression -> . MINUS expression
    (18) expression -> . expression COMPARATOR expression
    (19) expression -> . expression BOOLEAN_OPERATOR expression
    (20) expression -> . expression IMPLIES expression
    (21) expression -> . IF expression THEN assignment ELSE assignment

    LPAREN          shift and go to state 9
    NUMBER          shift and go to state 10
    VARIABLE        shift and go to state 24
    MINUS           shift and go to state 8
    IF              shift and go to state 11

    expression                     shift and go to state 34

state 20

    (19) expression -> expression BOOLEAN_OPERATOR . expression
    (11) expression -> . expression PLUS expression
    (12) expression -> . expression MINUS expression
    (13) expression -> . expression TIMES expression
    (14) expression -> . LPAREN expression RPAREN
    (15) expression -> . NUMBER
    (16) expression -> . VARIABLE
    (17) expression -> . MINUS expression
    (18) expression -> . expression COMPARATOR expression
    (19) expression -> . expression BOOLEAN_OPERATOR expression
    (20) expression -> . expression IMPLIES expression
    (21) expression -> . IF expression THEN assignment ELSE assignment

    LPAREN          shift and go to state 9
    NUMBER          shift and go to state 10
    VARIABLE        shift and go to state 24
    MINUS           shift and go to state 8
    IF              shift and go to state 11

    expression                     shift and go to state 35

state 21

    (20) expression -> expression IMPLIES . expression
    (11) expression -> . expression PLUS expression
    (12) expression -> . expression MINUS expression
    (13) expression -> . expression TIMES expression
    (14) expression -> . LPAREN expression RPAREN
    (15) expression -> . NUMBER
    (16) expression -> . VARIABLE
    (17) expression -> . MINUS expression
    (18) expression -> . expression COMPARATOR expression
    (19) expression -> . expression BOOLEAN_OPERATOR expression
    (20) expression -> . expression IMPLIES expression
    (21) expression -> . IF expression THEN assignment ELSE assignment

    LPAREN          shift and go to state 9
    NUMBER          shift and go to state 10
    VARIABLE        shift and go to state 24
    MINUS           shift and go to state 8
    IF              shift and go to state 11

    expression                     shift and go to state 36

state 22

    (10) assignment -> VARIABLE ASSIGNMENT . expression
    (11) expression -> . expression PLUS expression
    (12) expression -> . expression MINUS expression
    (13) expression -> . expression TIMES expression
    (14) expression -> . LPAREN expression RPAREN
    (15) expression -> . NUMBER
    (16) expression -> . VARIABLE
    (17) expression -> . MINUS expression
    (18) expression -> . expression COMPARATOR expression
    (19) expression -> . expression BOOLEAN_OPERATOR expression
    (20) expression -> . expression IMPLIES expression
    (21) expression -> . IF expression THEN assignment ELSE assignment

    LPAREN          shift and go to state 9
    NUMBER          shift and go to state 10
    VARIABLE        shift and go to state 24
    MINUS           shift and go to state 8
    IF              shift and go to state 11

    expression                     shift and go to state 37

state 23

    (17) expression -> MINUS expression .
    (11) expression -> expression . PLUS expression
    (12) expression -> expression . MINUS expression
    (13) expression -> expression . TIMES expression
    (18) expression -> expression . COMPARATOR expression
    (19) expression -> expression . BOOLEAN_OPERATOR expression
    (20) expression -> expression . IMPLIES expression

    PLUS            reduce using rule 17 (expression -> MINUS expression .)
    MINUS           reduce using rule 17 (expression -> MINUS expression .)
    TIMES           reduce using rule 17 (expression -> MINUS expression .)
    COMPARATOR      reduce using rule 17 (expression -> MINUS expression .)
    BOOLEAN_OPERATOR reduce using rule 17 (expression -> MINUS expression .)
    IMPLIES         reduce using rule 17 (expression -> MINUS expression .)
    $end            reduce using rule 17 (expression -> MINUS expression .)
    RPAREN          reduce using rule 17 (expression -> MINUS expression .)
    THEN            reduce using rule 17 (expression -> MINUS expression .)
    ELSE            reduce using rule 17 (expression -> MINUS expression .)

  ! PLUS            [ shift and go to state 16 ]
  ! MINUS           [ shift and go to state 17 ]
  ! TIMES           [ shift and go to state 18 ]
  ! COMPARATOR      [ shift and go to state 19 ]
  ! BOOLEAN_OPERATOR [ shift and go to state 20 ]
  ! IMPLIES         [ shift and go to state 21 ]


state 24

    (16) expression -> VARIABLE .

    PLUS            reduce using rule 16 (expression -> VARIABLE .)
    MINUS           reduce using rule 16 (expression -> VARIABLE .)
    TIMES           reduce using rule 16 (expression -> VARIABLE .)
    COMPARATOR      reduce using rule 16 (expression -> VARIABLE .)
    BOOLEAN_OPERATOR reduce using rule 16 (expression -> VARIABLE .)
    IMPLIES         reduce using rule 16 (expression -> VARIABLE .)
    $end            reduce using rule 16 (expression -> VARIABLE .)
    RPAREN          reduce using rule 16 (expression -> VARIABLE .)
    THEN            reduce using rule 16 (expression -> VARIABLE .)
    ELSE            reduce using rule 16 (expression -> VARIABLE .)


state 25

    (14) expression -> LPAREN expression . RPAREN
    (11) expression -> expression . PLUS expression
    (12) expression -> expression . MINUS expression
    (13) expression -> expression . TIMES expression
    (18) expression -> expression . COMPARATOR expression
    (19) expression -> expression . BOOLEAN_OPERATOR expression
    (20) expression -> expression . IMPLIES expression

    RPAREN          shift and go to state 38
    PLUS            shift and go to state 16
    MINUS           shift and go to state 17
    TIMES           shift and go to state 18
    COMPARATOR      shift and go to state 19
    BOOLEAN_OPERATOR shift and go to state 20
    IMPLIES         shift and go to state 21


state 26

    (21) expression -> IF expression . THEN assignment ELSE assignment
    (11) expression -> expression . PLUS expression
    (12) expression -> expression . MINUS expression
    (13) expression -> expression . TIMES expression
    (18) expression -> expression . COMPARATOR expression
    (19) expression -> expression . BOOLEAN_OPERATOR expression
    (20) expression -> expression . IMPLIES expression

    THEN            shift and go to state 39
    PLUS            shift and go to state 16
    MINUS           shift and go to state 17
    TIMES           shift and go to state 18
    COMPARATOR      shift and go to state 19
    BOOLEAN_OPERATOR shift and go to state 20
    IMPLIES         shift and go to state 21


state 27

    (8) annotation -> ANNOTATION expression .
    (11) expression -> expression . PLUS expression
    (12) expression -> expression . MINUS expression
    (13) expression -> expression . TIMES expression
    (18) expression -> expression . COMPARATOR expression
    (19) expression -> expression . BOOLEAN_OPERATOR expression
    (20) expression -> expression . IMPLIES expression

    $end            reduce using rule 8 (annotation -> ANNOTATION expression .)
    PLUS            shift and go to state 16
    MINUS           shift and go to state 17
    TIMES           shift and go to state 18
    COMPARATOR      shift and go to state 19
    BOOLEAN_OPERATOR shift and go to state 20
    IMPLIES         shift and go to state 21


state 28

    (9) assumption -> ASSUME expression .
    (11) expression -> expression . PLUS expression
    (12) expression -> expression . MINUS expression
    (13) expression -> expression . TIMES expression
    (18) expression -> expression . COMPARATOR expression
    (19) expression -> expression . BOOLEAN_OPERATOR expression
    (20) expression -> expression . IMPLIES expression

    $end            reduce using rule 9 (assumption -> ASSUME expression .)
    PLUS            shift and go to state 16
    MINUS           shift and go to state 17
    TIMES           shift and go to state 18
    COMPARATOR      shift and go to state 19
    BOOLEAN_OPERATOR shift and go to state 20
    IMPLIES         shift and go to state 21


state 29

    (6) declaration -> BOOL_TYPE VARIABLE .

    $end            reduce using rule 6 (declaration -> BOOL_TYPE VARIABLE .)


state 30

    (7) declaration -> INT_TYPE VARIABLE .

    $end            reduce using rule 7 (declaration -> INT_TYPE VARIABLE .)


state 31

    (11) expression -> expression PLUS expression .
    (11) expression -> expression . PLUS expression
    (12) expression -> expression . MINUS expression
    (13) expression -> expression . TIMES expression
    (18) expression -> expression . COMPARATOR expression
    (19) expression -> expression . BOOLEAN_OPERATOR expression
    (20) expression -> expression . IMPLIES expression

    PLUS            reduce using rule 11 (expression -> expression PLUS expression .)
    MINUS           reduce using rule 11 (expression -> expression PLUS expression .)
    COMPARATOR      reduce using rule 11 (expression -> expression PLUS expression .)
    BOOLEAN_OPERATOR reduce using rule 11 (expression -> expression PLUS expression .)
    IMPLIES         reduce using rule 11 (expression -> expression PLUS expression .)
    $end            reduce using rule 11 (expression -> expression PLUS expression .)
    RPAREN          reduce using rule 11 (expression -> expression PLUS expression .)
    THEN            reduce using rule 11 (expression -> expression PLUS expression .)
    ELSE            reduce using rule 11 (expression -> expression PLUS expression .)
    TIMES           shift and go to state 18

  ! TIMES           [ reduce using rule 11 (expression -> expression PLUS expression .) ]
  ! PLUS            [ shift and go to state 16 ]
  ! MINUS           [ shift and go to state 17 ]
  ! COMPARATOR      [ shift and go to state 19 ]
  ! BOOLEAN_OPERATOR [ shift and go to state 20 ]
  ! IMPLIES         [ shift and go to state 21 ]


state 32

    (12) expression -> expression MINUS expression .
    (11) expression -> expression . PLUS expression
    (12) expression -> expression . MINUS expression
    (13) expression -> expression . TIMES expression
    (18) expression -> expression . COMPARATOR expression
    (19) expression -> expression . BOOLEAN_OPERATOR expression
    (20) expression -> expression . IMPLIES expression

    PLUS            reduce using rule 12 (expression -> expression MINUS expression .)
    MINUS           reduce using rule 12 (expression -> expression MINUS expression .)
    COMPARATOR      reduce using rule 12 (expression -> expression MINUS expression .)
    BOOLEAN_OPERATOR reduce using rule 12 (expression -> expression MINUS expression .)
    IMPLIES         reduce using rule 12 (expression -> expression MINUS expression .)
    $end            reduce using rule 12 (expression -> expression MINUS expression .)
    RPAREN          reduce using rule 12 (expression -> expression MINUS expression .)
    THEN            reduce using rule 12 (expression -> expression MINUS expression .)
    ELSE            reduce using rule 12 (expression -> expression MINUS expression .)
    TIMES           shift and go to state 18

  ! TIMES           [ reduce using rule 12 (expression -> expression MINUS expression .) ]
  ! PLUS            [ shift and go to state 16 ]
  ! MINUS           [ shift and go to state 17 ]
  ! COMPARATOR      [ shift and go to state 19 ]
  ! BOOLEAN_OPERATOR [ shift and go to state 20 ]
  ! IMPLIES         [ shift and go to state 21 ]


state 33

    (13) expression -> expression TIMES expression .
    (11) expression -> expression . PLUS expression
    (12) expression -> expression . MINUS expression
    (13) expression -> expression . TIMES expression
    (18) expression -> expression . COMPARATOR expression
    (19) expression -> expression . BOOLEAN_OPERATOR expression
    (20) expression -> expression . IMPLIES expression

    PLUS            reduce using rule 13 (expression -> expression TIMES expression .)
    MINUS           reduce using rule 13 (expression -> expression TIMES expression .)
    TIMES           reduce using rule 13 (expression -> expression TIMES expression .)
    COMPARATOR      reduce using rule 13 (expression -> expression TIMES expression .)
    BOOLEAN_OPERATOR reduce using rule 13 (expression -> expression TIMES expression .)
    IMPLIES         reduce using rule 13 (expression -> expression TIMES expression .)
    $end            reduce using rule 13 (expression -> expression TIMES expression .)
    RPAREN          reduce using rule 13 (expression -> expression TIMES expression .)
    THEN            reduce using rule 13 (expression -> expression TIMES expression .)
    ELSE            reduce using rule 13 (expression -> expression TIMES expression .)

  ! PLUS            [ shift and go to state 16 ]
  ! MINUS           [ shift and go to state 17 ]
  ! TIMES           [ shift and go to state 18 ]
  ! COMPARATOR      [ shift and go to state 19 ]
  ! BOOLEAN_OPERATOR [ shift and go to state 20 ]
  ! IMPLIES         [ shift and go to state 21 ]


state 34

    (18) expression -> expression COMPARATOR expression .
    (11) expression -> expression . PLUS expression
    (12) expression -> expression . MINUS expression
    (13) expression -> expression . TIMES expression
    (18) expression -> expression . COMPARATOR expression
    (19) expression -> expression . BOOLEAN_OPERATOR expression
    (20) expression -> expression . IMPLIES expression

    COMPARATOR      reduce using rule 18 (expression -> expression COMPARATOR expression .)
    IMPLIES         reduce using rule 18 (expression -> expression COMPARATOR expression .)
    $end            reduce using rule 18 (expression -> expression COMPARATOR expression .)
    RPAREN          reduce using rule 18 (expression -> expression COMPARATOR expression .)
    THEN            reduce using rule 18 (expression -> expression COMPARATOR expression .)
    ELSE            reduce using rule 18 (expression -> expression COMPARATOR expression .)
    PLUS            shift and go to state 16
    MINUS           shift and go to state 17
    TIMES           shift and go to state 18
    BOOLEAN_OPERATOR shift and go to state 20

  ! PLUS            [ reduce using rule 18 (expression -> expression COMPARATOR expression .) ]
  ! MINUS           [ reduce using rule 18 (expression -> expression COMPARATOR expression .) ]
  ! TIMES           [ reduce using rule 18 (expression -> expression COMPARATOR expression .) ]
  ! BOOLEAN_OPERATOR [ reduce using rule 18 (expression -> expression COMPARATOR expression .) ]
  ! COMPARATOR      [ shift and go to state 19 ]
  ! IMPLIES         [ shift and go to state 21 ]


state 35

    (19) expression -> expression BOOLEAN_OPERATOR expression .
    (11) expression -> expression . PLUS expression
    (12) expression -> expression . MINUS expression
    (13) expression -> expression . TIMES expression
    (18) expression -> expression . COMPARATOR expression
    (19) expression -> expression . BOOLEAN_OPERATOR expression
    (20) expression -> expression . IMPLIES expression

    COMPARATOR      reduce using rule 19 (expression -> expression BOOLEAN_OPERATOR expression .)
    BOOLEAN_OPERATOR reduce using rule 19 (expression -> expression BOOLEAN_OPERATOR expression .)
    IMPLIES         reduce using rule 19 (expression -> expression BOOLEAN_OPERATOR expression .)
    $end            reduce using rule 19 (expression -> expression BOOLEAN_OPERATOR expression .)
    RPAREN          reduce using rule 19 (expression -> expression BOOLEAN_OPERATOR expression .)
    THEN            reduce using rule 19 (expression -> expression BOOLEAN_OPERATOR expression .)
    ELSE            reduce using rule 19 (expression -> expression BOOLEAN_OPERATOR expression .)
    PLUS            shift and go to state 16
    MINUS           shift and go to state 17
    TIMES           shift and go to state 18

  ! PLUS            [ reduce using rule 19 (expression -> expression BOOLEAN_OPERATOR expression .) ]
  ! MINUS           [ reduce using rule 19 (expression -> expression BOOLEAN_OPERATOR expression .) ]
  ! TIMES           [ reduce using rule 19 (expression -> expression BOOLEAN_OPERATOR expression .) ]
  ! COMPARATOR      [ shift and go to state 19 ]
  ! BOOLEAN_OPERATOR [ shift and go to state 20 ]
  ! IMPLIES         [ shift and go to state 21 ]


state 36

    (20) expression -> expression IMPLIES expression .
    (11) expression -> expression . PLUS expression
    (12) expression -> expression . MINUS expression
    (13) expression -> expression . TIMES expression
    (18) expression -> expression . COMPARATOR expression
    (19) expression -> expression . BOOLEAN_OPERATOR expression
    (20) expression -> expression . IMPLIES expression

  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for TIMES resolved as shift
  ! shift/reduce conflict for COMPARATOR resolved as shift
  ! shift/reduce conflict for BOOLEAN_OPERATOR resolved as shift
  ! shift/reduce conflict for IMPLIES resolved as shift
    $end            reduce using rule 20 (expression -> expression IMPLIES expression .)
    RPAREN          reduce using rule 20 (expression -> expression IMPLIES expression .)
    THEN            reduce using rule 20 (expression -> expression IMPLIES expression .)
    ELSE            reduce using rule 20 (expression -> expression IMPLIES expression .)
    PLUS            shift and go to state 16
    MINUS           shift and go to state 17
    TIMES           shift and go to state 18
    COMPARATOR      shift and go to state 19
    BOOLEAN_OPERATOR shift and go to state 20
    IMPLIES         shift and go to state 21

  ! PLUS            [ reduce using rule 20 (expression -> expression IMPLIES expression .) ]
  ! MINUS           [ reduce using rule 20 (expression -> expression IMPLIES expression .) ]
  ! TIMES           [ reduce using rule 20 (expression -> expression IMPLIES expression .) ]
  ! COMPARATOR      [ reduce using rule 20 (expression -> expression IMPLIES expression .) ]
  ! BOOLEAN_OPERATOR [ reduce using rule 20 (expression -> expression IMPLIES expression .) ]
  ! IMPLIES         [ reduce using rule 20 (expression -> expression IMPLIES expression .) ]


state 37

    (10) assignment -> VARIABLE ASSIGNMENT expression .
    (11) expression -> expression . PLUS expression
    (12) expression -> expression . MINUS expression
    (13) expression -> expression . TIMES expression
    (18) expression -> expression . COMPARATOR expression
    (19) expression -> expression . BOOLEAN_OPERATOR expression
    (20) expression -> expression . IMPLIES expression

  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for TIMES resolved as shift
  ! shift/reduce conflict for COMPARATOR resolved as shift
  ! shift/reduce conflict for BOOLEAN_OPERATOR resolved as shift
  ! shift/reduce conflict for IMPLIES resolved as shift
    $end            reduce using rule 10 (assignment -> VARIABLE ASSIGNMENT expression .)
    ELSE            reduce using rule 10 (assignment -> VARIABLE ASSIGNMENT expression .)
    RPAREN          reduce using rule 10 (assignment -> VARIABLE ASSIGNMENT expression .)
    THEN            reduce using rule 10 (assignment -> VARIABLE ASSIGNMENT expression .)
    PLUS            shift and go to state 16
    MINUS           shift and go to state 17
    TIMES           shift and go to state 18
    COMPARATOR      shift and go to state 19
    BOOLEAN_OPERATOR shift and go to state 20
    IMPLIES         shift and go to state 21

  ! PLUS            [ reduce using rule 10 (assignment -> VARIABLE ASSIGNMENT expression .) ]
  ! MINUS           [ reduce using rule 10 (assignment -> VARIABLE ASSIGNMENT expression .) ]
  ! TIMES           [ reduce using rule 10 (assignment -> VARIABLE ASSIGNMENT expression .) ]
  ! COMPARATOR      [ reduce using rule 10 (assignment -> VARIABLE ASSIGNMENT expression .) ]
  ! BOOLEAN_OPERATOR [ reduce using rule 10 (assignment -> VARIABLE ASSIGNMENT expression .) ]
  ! IMPLIES         [ reduce using rule 10 (assignment -> VARIABLE ASSIGNMENT expression .) ]


state 38

    (14) expression -> LPAREN expression RPAREN .

    PLUS            reduce using rule 14 (expression -> LPAREN expression RPAREN .)
    MINUS           reduce using rule 14 (expression -> LPAREN expression RPAREN .)
    TIMES           reduce using rule 14 (expression -> LPAREN expression RPAREN .)
    COMPARATOR      reduce using rule 14 (expression -> LPAREN expression RPAREN .)
    BOOLEAN_OPERATOR reduce using rule 14 (expression -> LPAREN expression RPAREN .)
    IMPLIES         reduce using rule 14 (expression -> LPAREN expression RPAREN .)
    $end            reduce using rule 14 (expression -> LPAREN expression RPAREN .)
    RPAREN          reduce using rule 14 (expression -> LPAREN expression RPAREN .)
    THEN            reduce using rule 14 (expression -> LPAREN expression RPAREN .)
    ELSE            reduce using rule 14 (expression -> LPAREN expression RPAREN .)


state 39

    (21) expression -> IF expression THEN . assignment ELSE assignment
    (10) assignment -> . VARIABLE ASSIGNMENT expression

    VARIABLE        shift and go to state 41

    assignment                     shift and go to state 40

state 40

    (21) expression -> IF expression THEN assignment . ELSE assignment

    ELSE            shift and go to state 42


state 41

    (10) assignment -> VARIABLE . ASSIGNMENT expression

    ASSIGNMENT      shift and go to state 22


state 42

    (21) expression -> IF expression THEN assignment ELSE . assignment
    (10) assignment -> . VARIABLE ASSIGNMENT expression

    VARIABLE        shift and go to state 41

    assignment                     shift and go to state 43

state 43

    (21) expression -> IF expression THEN assignment ELSE assignment .
